# family-tree-generator

./: CMakeLists.txt  Readme.md  Specifications.md  main.cpp
include/: Person.hpp
include/generators/: Generator.hpp  NameGenerator.hpp  PersonGenerator.hpp
include/utilities/time_systems/: EarthTimeSystem.hpp  GalacticTimeSystem.hpp  TimeSystem.hpp
src/: FamilyTree.cpp  Person.cpp  main.cpp
src/generators/: Generator.cpp  NameGenerator.cpp  PersonGenerator.cpp
src/include/: FamilyTree.hpp  Person.hpp
src/utilities/time_systems/: EarthTimeSystem.cpp  GalacticTimeSystem.cpp  TimeSystem.cpp
